--- a/Deep Learning/Convolution Neural Nets/Object_detection_SIFT_&_ORB.ipynb
+++ b/Deep Learning/Convolution Neural Nets/Object_detection_SIFT_&_ORB.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Object detection SIFT & ORB.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1GIriMBJog_lthjBx_2tP_kLrymHxkASe",
       "authorship_tag": "ABX9TyNIWcVRNNNcvFTrfvkrDIOA",
       "include_colab_link": true
